2003-05-30  Andreas Jaeger  <aj@suse.de>

	* sysdeps/unix/sysv/linux/x86_64/sysdep-cancel.h
	(SAVESTK_0): Add CFI directives.
	(SAVESTK_3): Likewise.
	(SAVESTK_5): Likewise.
	(RESTSTK_0): Likewise.
	(RESTSTK_3): Likewise.
	(RESTSTK_5): Likewise.

2003-05-05  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/i386/tls.h (TLS_DO_SET_THREAD_AREA): Add \n to error
	messages.

2003-05-04  Roland McGrath  <roland@redhat.com>

	* Makefile ($(objpfx)../libc.so): New target.

2003-04-26  Ulrich Drepper  <drepper@redhat.com>

	* pthread.c (__pthread_initialize_manager): Remove one last
	p_multiple_threads call.

2003-04-22  Jakub Jelinek  <jakub@redhat.com>

	* pthread.c (__pthread_initialize_manager): Subtract
	TLS_PRE_TCB_SIZE bytes from tcbp to get to descr.
	* manager.c (pthread_handle_create): Subtract or add TLS_PRE_TCB_SIZE
	instead of sizeof (pthread_descr).
	(pthread_free): Add TLS_PRE_TCB_SIZE instead of sizeof (pthread_descr).
	* sysdeps/powerpc/tls.h (TLS_INIT_TCB_SIZE, TLS_TCB_SIZE): Define to 0.
	(TLS_INIT_TCB_ALIGN, TLS_TCB_ALIGN): Define to alignment of
	pthread_descr.
	(TLS_PRE_TCB_SIZE): Increase to cover tcbhead_t preceeded by pad
	to TLS_TCB_ALIGN.
	(INSTALL_DTV, GET_DTV, THREAD_DTV): tcbhead_t is immediately before
	tcbp.
	(TLS_INIT_TP, THREAD_SELF, INIT_THREAD_SELF): Don't add TLS_TCB_SIZE
	unneccessarily.
	(NO_TLS_OFFSET): Define.

2003-04-22  Roland McGrath  <roland@redhat.com>

	* Makeconfig (shared-thread-library): Reverse link order to work
	around linker bug.

2003-04-20  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/i386/useldt.h (DO_SET_THREAD_AREA): Make sure the
	compiler knows we use the ldt_entry variable and that the syscall
	modifies the memory.

	* internals.h: Split pthread_functions definition into...
	* sysdeps/pthread/pthread-functions.h: ...new file.

	* sysdeps/i386/useldt.h: Include <sysdep.h>.

2003-04-13  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/i386/sysdep-cancel.h: Rename macros to